products section added

--- a/index.css
+++ b/index.css
@@ -7,39 +7,39 @@ body {
 
 @layer components {
   .container {
-    @apply flex flex-col px-[13px] my-14;
+    @apply flex flex-col px-3.25 my-14;
   }
   h1 {
-    @apply text-[56px] font-extrabold leading-20 tracking-[0.2px];
+    @apply text-[3.5rem] font-extrabold;
   }
   h2 {
-    @apply text-[40px] font-bold leading-[57px] tracking-[0.2px];
+    @apply text-[2.5rem] font-bold;
   }
   h3 {
-    @apply text-2xl font-bold leading-8 tracking-[0.1px];
+    @apply text-2xl font-bold;
   }
   h4 {
-    @apply text-[20px] font-medium leading-[30px] tracking-[0.2px];
+    @apply text-[1.25rem] font-medium;
   }
   h5 {
-    @apply text-[16px] font-bold leading-6 tracking-[0.1px];
+    @apply text-[1rem] font-bold;
   }
   h6 {
-    @apply text-sm font-semibold leading-6 tracking-[0.2px];
+    @apply text-sm font-semibold;
   }
   .btn-text {
-    @apply text-sm font-bold leading-7 tracking-[0.2px];
+    @apply text-sm font-bold;
   }
   .mobile-menu {
-    @apply text-3xl font-normal leading-[45px] tracking-[0.2px];
+    @apply text-3xl font-normal hover:font-semibold;
   }
   p {
-    @apply text-sm font-medium leading-5 tracking-[0.2px];
+    @apply text-sm font-medium;
   }
   .list {
-    @apply text-xl font-normal leading-7.5 tracking-[0.2px];
+    @apply text-xl font-normal;
   }
   .link {
-    @apply text-sm font-semibold leading-6 tracking-[0.2px];
+    @apply text-sm font-semibold;
   }
 }
