--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ body {
     @apply text-[1rem] font-bold;
   }
   h6 {
-    @apply text-sm font-semibold;
+    @apply text-sm font-bold;
   }
   .btn-text {
     @apply text-sm font-bold;
@@ -40,6 +40,6 @@ body {
     @apply text-xl font-normal;
   }
   .link {
-    @apply text-sm font-semibold;
+    @apply text-sm font-bold;
   }
 }
